# token-rs

./: .gitignore  Cargo.toml  README.md  build.rs
contracts/: ERC20.sol  ERC20MinterPauser.sol
contracts/extensions/: ERC20Pausable.sol
contracts/utils/: AccessControl.sol
src/: main.rs  utils.rs
tests/: erc20_mintable_pausable.rs  main.rs  runner.rs  tests.rs  types.rs  utils.rs
