[package]
name = "contracts"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.39"
hex = { version = "0.4.3", default-features = false, features = ["std"] }

[build-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
