[package]
name = "token-rs"
version = "0.1.0"
edition = "2018"
autotests = false

[[bin]]
name = "tests"
path = "tests/main.rs"

[[test]]
name = "contracts"
path = "tests/runner.rs"
harness = false

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["legacy"]}
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.39"
hex = { version = "0.4.3", default-features = false, features = ["std"] }
futures = "0.3.15"
async-trait = "0.1.51"
inventory = "0.2.0"

[build-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
